# followup

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  flake.nix
frontend/: app.js  i18n.js  index.html  styles.css
migrations/: 0001_init.sql  0002_phase.sql
src/: assets.rs  config.rs  db.rs  error.rs  main.rs  models.rs  session.rs  state.rs  tests.rs
src/routes/: admin.rs  export.rs  health.rs  mod.rs  signup.rs  webauthn.rs
